New features and configuration